--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<!--    PRESENTATION   -->
 
 	<div class="content_presentation">
-		<div><img class="img_presentation" src="img/img_presentation.png"></div>
+		<div class="content_img_presentation"><img class="img_presentation" src="img/img_presentation.png"></div>
 		
 		<div class="text_presentation">
 			<h1 class="title_presentation">Qui sommes-nous?</h1>
